--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,11 @@ button {
     cursor: pointer;
 }
 
+.gallery-section img:hover {
+    border: 5px solid white;
+    
+}
+
 footer {
     width: 100%;
     position: fixed;
