--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@ body {
     margin: 0;
     text-align: center;
     box-sizing: border-box;
-    background-color: lightblue;
+    background-color: rgb(13, 28, 114);
     font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
     overflow-y: auto;
+    color: white;
 }
 
 header {
@@ -14,7 +15,6 @@ header {
     width: 100%;
     padding: 1px;
     background-color: rgb(11, 11, 43);
-    color: white;
     height: 70px;
     justify-content: center;
     align-items: center;
@@ -24,7 +24,7 @@ header {
 
 h1 {
     text-decoration: underline;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .meme-container {
@@ -33,10 +33,9 @@ h1 {
     max-width: 1200px;
     margin: 0 auto;
     justify-content: center;
-    background-color: rgb(0, 103, 194);
+    background-color: rgb(8, 9, 68);
     width: fit-content;
-    padding: 25px;
-    border: 2px dotted black;
+    padding: 5px;
     border-radius: 10px;
 }
 
@@ -44,12 +43,18 @@ h1 {
     background-color: rgb(53, 53, 228);
     display: flex;
     max-width: 100%;
-    padding: 10px;
+    padding: 5px;
+    border-radius: 10px;
 }
 
 .meme-display {
     display: flex;
     max-width: 100%;
+}
+
+.meme-display canvas {
+    width: 400px;
+    height: 400px;
 }
 
 .main-grid {
@@ -64,6 +69,13 @@ h1 {
 
 .text-input {
     grid-column: 1 / span 4;
+    border-radius: 10px;
+    border: 2px solid black;
+}
+
+#userText {
+    height: 25px;
+    width: 90%;
 }
 
 .one-col {
@@ -112,13 +124,33 @@ button {
     border-radius: 10px;
 }
 
-.download-btn {
+.download-link {
     width: fit-content;
-    font-size: 15px;
+    display: inline-block;
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    border: 2px solid black;
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: 18px;
+    margin-left: 5px;
+    padding: 8px;
+}
+
+.download-link:hover {
+    background-color: #0056b3;
+    border: 2px solid #003d80;
 }
 
 .share-btn {
     width: fit-content;
+    margin-left: 5px;
+}
+
+.share-btn:hover {
+    background-color: #0056b3;
+    border: 2px solid #003d80;
 }
 
 #userColor {
@@ -131,45 +163,25 @@ button {
     border-radius: 3px;
 }
 
-.modal-wrapper{
-    display: none;
+.gallery-section-wrapper {
+    background-color: #013164;
+    margin-top: 5vh;
+    padding-top: 10px;
+    border-radius: 50px;
 }
 
-.text-input-modal {
-    position: fixed;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    background-color: azure;
-    width: fit-content;
-    height: 100px;
-    gap: 10px;
+.gallery-section-wrapper h2 {
+    font-family: 'Arial', sans-serif;
+    letter-spacing: 1.5px;
+    margin: auto;
+    margin-bottom: 20px;
+    text-align: center;
+    color: #333;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 10px;
-    justify-items: center;
-    align-items: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.text-input-modal button {
+    border-radius: 5px;
     width: fit-content;
-}
-
-#userText {
-    height: 25px;
-    grid-column: 1 / -1;
-    grid-row: 1;
-    width: 100%;
-}
-
-.close-btn {
-    grid-row: 2;
-    grid-column: 1 / 2;
-}
-
-.submit-btn {
-    grid-row: 2;
-    grid-column: 3 / 4;
 }
 
 .gallery-section {
@@ -177,7 +189,7 @@ button {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     justify-items: center;
-    margin-bottom: 1vh;
+    margin-bottom: 5vh;
 }
 
 .gallery-section img {
@@ -185,11 +197,13 @@ button {
     max-height: 275px;
     object-fit: contain;
     cursor: pointer;
+    border-radius: 10px;
 }
 
 .gallery-section img:hover {
-    border: 5px solid white;
-    
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.8);
+    transform: rotate(5deg) scale(1.1);
+    transition: transform 0.3s ease-in-out;
 }
 
 footer {
@@ -198,4 +212,5 @@ footer {
     bottom: 0;
     padding: 5px;
     background-color: antiquewhite;
+    color: black;
 }
