--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     text-align: center;
@@ -23,8 +22,9 @@ header {
     margin-bottom: 2vh;
 }
 
-.heads-up{
-    width: 65%;
+.heads-up {
+    max-width: 400px;
+    padding: 10px;
     text-align: center;
     margin: auto;
     font-size: 12px;
@@ -60,11 +60,6 @@ h1 {
     max-width: 100%;
 }
 
-.meme-display canvas {
-    width: 400px;
-    height: 400px;
-}
-
 .main-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -75,7 +70,7 @@ h1 {
     align-items: center;
 }
 
-.meme-edit-options-title{
+.meme-edit-options-title {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -123,7 +118,7 @@ h1 {
     border-radius: 10px;
 }
 
-#image-search{
+#image-search {
     margin-bottom: 3vh;
     width: 50%;
     height: 30px;
@@ -134,6 +129,8 @@ canvas {
     background-color: white;
     border: 5px solid rgb(100, 63, 63);
     border-radius: 5px;
+    width: 400px;
+    height: 400px;
 }
 
 button {
@@ -251,7 +248,7 @@ footer {
 
 
 @media screen and (min-width: 320px) {
-    header h1{
+    header h1 {
         font-size: 21px;
     }
 
@@ -268,9 +265,9 @@ footer {
         position: relative;
     }
 
-    .meme-display canvas {
+    canvas {
         width: 300px;
-        height: 300px;
+        height: 400px;
     }
 
     .gallery-section {
@@ -290,8 +287,15 @@ footer {
     }
 }
 
+@media screen and (min-width: 400px) {
+    canvas {
+        width: 350px;
+        height: 400px;
+    }
+}
+
 @media screen and (min-width: 500px) {
-    header h1{
+    header h1 {
         font-size: 25px;
     }
 
@@ -343,7 +347,7 @@ footer {
         border-radius: 10px;
     }
 
-    .meme-display canvas {
+    canvas {
         width: 400px;
         height: 400px;
     }
