--- a/css/style.css
+++ b/css/style.css
@@ -1,449 +1,2 @@
-body {
-    margin: 0;
-    text-align: center;
-    box-sizing: border-box;
-    background-color: rgb(13, 28, 114);
-    font-family: Arial, Helvetica, sans-serif;
-    overflow-x: hidden;
-    overflow-y: auto;
-    color: white;
-}
-
-header {
-    display: flex;
-    margin: auto;
-    width: 100%;
-    padding: 1px;
-    background-color: rgb(11, 11, 43);
-    height: 70px;
-    justify-content: center;
-    align-items: center;
-    margin-top: -1vh;
-    margin-bottom: 2vh;
-}
-
-.heads-up {
-    max-width: 400px;
-    padding: 10px;
-    text-align: center;
-    margin: auto;
-    font-size: 12px;
-}
-
-h1 {
-    text-decoration: underline;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.meme-container {
-    display: flex;
-    gap: 30px;
-    max-width: 1200px;
-    margin: 0 auto;
-    justify-content: center;
-    background-color: rgb(8, 9, 68);
-    width: fit-content;
-    padding: 5px;
-    border-radius: 10px;
-}
-
-.meme-edit-options {
-    background-color: rgb(53, 53, 228);
-    display: flex;
-    max-width: 100%;
-    padding: 5px;
-    border-radius: 10px;
-}
-
-.meme-display {
-    display: flex;
-    max-width: 100%;
-}
-
-.main-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 10px;
-    max-width: 100%;
-    margin: 0 auto;
-    justify-items: center;
-    align-items: center;
-}
-
-.meme-edit-options-title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    grid-column: 1 / 4 span;
-    width: 100%;
-    font-size: 15px;
-    background-color: #0a0949;
-    border-radius: 10px;
-    height: 40px;
-}
-
-.text-input {
-    grid-column: 1 / span 4;
-    border-radius: 10px;
-    border: 2px solid black;
-}
-
-#userText {
-    height: 25px;
-    width: 90%;
-}
-
-.one-col {
-    grid-column: span 1;
-}
-
-.two-col {
-    grid-column: span 2;
-}
-
-.sub-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
-    grid-column: 1 / span 4;
-    justify-items: center;
-    align-items: center;
-}
-
-#font-select {
-    width: 90%;
-    height: 30px;
-    font-size: 15px;
-    border: 2px solid black;
-    border-radius: 10px;
-}
-
-#image-search {
-    margin-bottom: 3vh;
-    width: 50%;
-    height: 30px;
-    border-radius: 10px;
-}
-
-canvas {
-    background-color: white;
-    border: 5px solid rgb(100, 63, 63);
-    border-radius: 5px;
-    width: 400px;
-    height: 400px;
-}
-
-button {
-    cursor: pointer;
-    height: 40px;
-    width: 40px;
-    font-size: 20px;
-    border: 2px solid black;
-    border-radius: 10px;
-    padding: 4px;
-}
-
-.download-link {
-    width: fit-content;
-    display: inline-block;
-    background-color: white;
-    color: black;
-    text-decoration: none;
-    border: 2px solid black;
-    cursor: pointer;
-    border-radius: 10px;
-    font-size: 18px;
-    padding: 6px;
-}
-
-.download-link:hover,
-.share-btn:hover,
-.flexible-btn:hover,
-.custom-file-upload:hover {
-    background-color: #0056b3;
-    border: 2px solid #003d80;
-}
-
-.share-btn {
-    width: 100%;
-}
-
-.flexible-btn {
-    width: 100%;
-}
-
-.custom-file-upload {
-    width: 90%;
-    display: inline-block;
-    padding: 6px;
-    font-size: 21px;
-    cursor: pointer;
-    color: black;
-    background-color: white;
-    border-radius: 10px;
-    border: 2px solid black;
-}
-
-#userColor {
-    cursor: pointer;
-    width: 40px;
-    height: 40px;
-    background: white;
-    border: 2px solid black;
-    padding: 0;
-    border-radius: 3px;
-}
-
-.gallery-section-wrapper {
-    background-color: #013164;
-    margin-top: 5vh;
-    padding-top: 10px;
-    border-radius: 50px;
-}
-
-.gallery-section-wrapper h2 {
-    font-family: 'Arial', sans-serif;
-    letter-spacing: 1.5px;
-    margin: auto;
-    margin-bottom: 20px;
-    text-align: center;
-    color: #333;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 10px;
-    border-radius: 5px;
-    width: fit-content;
-}
-
-.gallery-section {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    justify-items: center;
-    margin-bottom: 5vh;
-}
-
-.gallery-section img {
-    max-width: 250px;
-    max-height: 250px;
-    object-fit: contain;
-    cursor: pointer;
-    border-radius: 10px;
-}
-
-.gallery-section img:hover {
-    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.8);
-    transform: rotate(5deg) scale(1.1);
-    transition: transform 0.3s ease-in-out;
-}
-
-footer {
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    padding: 5px;
-    background-color: antiquewhite;
-    color: black;
-}
-
-
-@media screen and (min-width: 320px) {
-    header h1 {
-        font-size: 21px;
-    }
-
-    .meme-container {
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-    }
-
-    .meme-display,
-    .meme-edit-options {
-        width: 97%;
-        justify-content: center;
-        position: relative;
-    }
-
-    canvas {
-        width: 300px;
-        height: 400px;
-    }
-
-    .gallery-section {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 20px;
-        justify-items: center;
-        margin-bottom: 5vh;
-    }
-
-    .gallery-section img {
-        max-width: 250px 300px;
-        max-height: 250px 300px;
-        object-fit: contain;
-        cursor: pointer;
-        border-radius: 10px;
-    }
-}
-
-@media screen and (min-width: 400px) {
-    canvas {
-        width: 350px;
-        height: 400px;
-    }
-}
-
-@media screen and (min-width: 500px) {
-    header h1 {
-        font-size: 25px;
-    }
-
-    .meme-container {
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-    }
-
-    .meme-display,
-    .meme-edit-options {
-        width: 97%;
-        justify-content: center;
-        position: relative;
-    }
-
-    .meme-edit-options::before,
-    .meme-edit-options::after {
-        content: "";
-        position: absolute;
-        height: 100.6%;
-        width: 60px;
-        background-color: #110733;
-        border-radius: 10px;
-        margin-top: -6px;
-    }
-
-    .meme-edit-options::before {
-        left: 0;
-    }
-
-    .meme-edit-options::after {
-        right: 0;
-    }
-
-    .gallery-section {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-        justify-items: center;
-        margin-bottom: 5vh;
-    }
-
-    .gallery-section img {
-        max-width: 225px;
-        max-height: 225px;
-        object-fit: contain;
-        cursor: pointer;
-        border-radius: 10px;
-    }
-
-    canvas {
-        width: 400px;
-        height: 400px;
-    }
-}
-
-@media screen and (min-width: 735px) {
-    .meme-container {
-        flex-direction: row;
-        align-items: center;
-        gap: 20px;
-    }
-
-    .meme-edit-options {
-        width: 100%;
-        padding: 5px;
-    }
-
-    .gallery-section img {
-        max-width: 300px;
-        max-height: 300px;
-        object-fit: contain;
-        cursor: pointer;
-        border-radius: 10px;
-    }
-
-    .meme-edit-options::before,
-    .meme-edit-options::after {
-        display: none;
-    }
-}
-
-@media screen and (min-width: 900px) {
-    .gallery-section {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 20px;
-        justify-items: center;
-        margin-bottom: 5vh;
-    }
-
-    .gallery-section img {
-        max-width: 250px;
-        max-height: 250px;
-        object-fit: contain;
-        cursor: pointer;
-        border-radius: 10px;
-    }
-
-    .meme-edit-options::before,
-    .meme-edit-options::after {
-        display: none;
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    .gallery-section {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 20px;
-        justify-items: center;
-        margin-bottom: 5vh;
-    }
-
-    .gallery-section img {
-        max-width: 250px;
-        max-height: 250px;
-        object-fit: contain;
-        cursor: pointer;
-        border-radius: 10px;
-    }
-}
-
-@media screen and (min-width: 1500px) {
-    .gallery-section img {
-        max-width: 275px;
-        max-height: 275px;
-        object-fit: contain;
-        cursor: pointer;
-        border-radius: 10px;
-    }
-}
-
-@media screen and (min-width: 1800px) {
-    .gallery-section {
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        gap: 20px;
-        justify-items: center;
-        margin-bottom: 5vh;
-    }
-
-    .gallery-section img {
-        max-width: 300px;
-        max-height: 300px;
-        object-fit: contain;
-        cursor: pointer;
-        border-radius: 10px;
-    }
-}
+@import url('main.css');
+@import url('mq.css');
