--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     text-align: center;
     box-sizing: border-box;
-    background-color: rgb(13, 28, 114);
+    background: linear-gradient(to right, rgb(3, 13, 65), rgb(23, 23, 148));
     font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
     overflow-y: auto;
@@ -11,237 +11,96 @@ body {
 
 header {
     display: flex;
-    margin: auto;
-    width: 100%;
-    padding: 1px;
-    background-color: rgb(11, 11, 43);
-    height: 70px;
-    justify-content: center;
+    flex-direction: row;
     align-items: center;
-    margin-top: -1vh;
+    justify-content: space-between;
+    padding: 10px 20px;
+    background: linear-gradient(to left, rgb(20, 20, 121), rgb(6, 6, 54));
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+    color: white;
+    text-shadow: 1px 1px 2px black;
+    opacity: 0.8;
+    border-bottom: 1px solid rgb(51, 49, 49);
     margin-bottom: 2vh;
 }
 
-.heads-up {
-    max-width: 400px;
-    padding: 10px;
-    text-align: center;
-    margin: auto;
-    font-size: 12px;
-}
-
-h1 {
-    text-decoration: underline;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.meme-container {
-    display: flex;
-    gap: 30px;
-    max-width: 1200px;
-    margin: 0 auto;
-    justify-content: center;
-    background-color: rgb(8, 9, 68);
-    width: fit-content;
-    padding: 5px;
-    border-radius: 10px;
-}
-
-.meme-edit-options {
-    background-color: rgb(53, 53, 228);
-    display: flex;
-    max-width: 100%;
-    padding: 5px;
-    border-radius: 10px;
-}
-
-.meme-display {
-    display: flex;
-    max-width: 100%;
-}
-
-.main-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 10px;
-    max-width: 100%;
-    margin: 0 auto;
-    justify-items: center;
-    align-items: center;
-}
-
-.meme-edit-options-title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    grid-column: 1 / 4 span;
-    width: 100%;
-    font-size: 14.5px;
-    background-color: #0a0949;
-    border-radius: 10px;
-    height: 40px;
-}
-
-.text-input {
-    grid-column: 1 / span 4;
-    border-radius: 10px;
-    border: 2px solid black;
-}
-
-#userText {
-    height: 25px;
-    width: 90%;
-}
-
-.one-col {
-    grid-column: span 1;
-}
-
-.two-col {
-    grid-column: span 2;
-}
-
-.sub-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
-    grid-column: 1 / span 4;
-    justify-items: center;
-    align-items: center;
-}
-
-#font-select {
-    width: 90%;
-    height: 30px;
-    font-size: 15px;
-    border: 2px solid black;
-    border-radius: 10px;
-}
-
-#image-search {
-    margin-bottom: 3vh;
-    width: 50%;
-    height: 30px;
-    border-radius: 10px;
-}
-
-canvas {
-    background-color: white;
-    border: 5px solid rgb(100, 63, 63);
-    border-radius: 5px;
-    width: 400px;
-    height: 400px;
-}
-
-button {
-    cursor: pointer;
-    height: 40px;
-    width: 40px;
-    font-size: 20px;
-    border: 2px solid black;
-    border-radius: 10px;
-    padding: 4px;
-}
-
-.download-link {
-    width: fit-content;
-    display: inline-block;
-    background-color: white;
-    color: black;
-    text-decoration: none;
-    border: 2px solid black;
-    cursor: pointer;
-    border-radius: 10px;
-    font-size: 18px;
-    padding: 7.5px;
-}
-
-.download-link:hover,
-.share-btn:hover,
-.flexible-btn:hover,
-.custom-file-upload:hover {
-    background-color: #0056b3;
-    border: 2px solid #003d80;
-}
-
-.share-btn {
-    width: 100%;
-}
-
-.flexible-btn {
-    width: 100%;
-}
-
-.custom-file-upload {
-    width: 90%;
-    display: inline-block;
-    padding: 6px;
-    font-size: 21px;
-    cursor: pointer;
-    color: black;
-    background-color: white;
-    border-radius: 10px;
-    border: 2px solid black;
-}
-
-#userColor {
-    cursor: pointer;
-    width: 40px;
-    height: 40px;
-    background: white;
-    border: 2px solid black;
-    padding: 0;
-    border-radius: 3px;
-}
-
-.gallery-section-wrapper {
-    background-color: #013164;
-    margin-top: 5vh;
-    padding-top: 10px;
-    border-radius: 50px;
-}
-
-.gallery-section-wrapper h2 {
-    font-family: 'Arial', sans-serif;
+.logo {
+    font-weight: bold;
+    font-family: 'Verdana', sans-serif;
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5); 
     letter-spacing: 1.5px;
-    margin: auto;
-    margin-bottom: 20px;
-    text-align: center;
-    color: #333;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 10px;
-    border-radius: 5px;
-    width: fit-content;
+    background: linear-gradient(to right, rgb(255, 255, 255), rgb(231, 231, 250));
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-.gallery-section {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    justify-items: center;
-    margin-bottom: 5vh;
-}
-
-.gallery-section img {
-    max-width: 250px;
-    max-height: 250px;
-    object-fit: contain;
-    cursor: pointer;
+.language-select {
+    background-color: rgb(240, 232, 232);
     border-radius: 10px;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    color: rgb(22, 20, 20);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
 }
 
-.gallery-section img:hover {
-    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.8);
-    transform: rotate(5deg) scale(1.1);
-    transition: transform 0.3s ease-in-out;
+.heads-up {
+    position: fixed;
+    background: linear-gradient(to bottom right, #d3f5cf, #b3c9ba);
+    border-radius: 25px;
+    display: block;
+    max-width: 400px;
+    height: fit-content;
+    padding: 10px;
+    padding-bottom: 20px;
+    text-align: center;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    font-size: 14px;
+    margin-top: 2vh;
+    z-index: 1;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    color: rgb(54, 48, 48);
+    font-family: 'Arial', sans-serif;
+}
+
+.hide-toggle {
+    display: none;
+}
+
+.got-it-button {
+    background: #FFAA33;
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;
+    color: rgb(39, 37, 37);
+    width: fit-content;
+    margin: auto;
+    font-weight: bold;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.got-it-button:hover {
+    background: #FFCC44;
+}
+
+.hide-toggle:checked+.heads-up {
+    display: none;
 }
 
 footer {
     width: 100%;
-    position: fixed;
-    bottom: 0;
-    padding: 5px;
-    background-color: antiquewhite;
-    color: black;
+    position: absolute;
+    padding: 10px 20px;
+    background-color: rgba(15, 15, 92, 0.5);
+    box-shadow: 0px -3px 10px rgba(0, 0, 0, 0.2);
+    border-top: 1px solid rgb(51, 49, 49);
+    color: rgb(133, 129, 129);
+    font-family: 'Georgia', serif;
+    text-align: center;
+    z-index: 999;
 }
